Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-585

sigsegv when hitting the metrics JSON dump web page and tablets are bootstrapping

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • M4.5
    • None
    • tserver

    Description

      Getting this when looking at the metrics while creating a big tablet:

      *** Aborted at 1418925967 (unix time) try "date -d @1418925967" if you are using GNU date ***
      PC: @     0x7f6aae56f2d9 kudu::subtle::RefCountedThreadSafeBase::AddRef()
      *** SIGSEGV (@0x0) received by PID 9586 (TID 0x7f69ca3ac700) from PID 0; stack trace: ***
          @       0x35bac0f500 (unknown)
          @     0x7f6aae56f2d9 kudu::subtle::RefCountedThreadSafeBase::AddRef()
          @     0x7f6ab2565b0f kudu::tablet::Tablet::MemRowSetSize()
          @     0x7f6aae8140d0 kudu::FunctionGauge<>::WriteValue()
          @     0x7f6aae80efbb kudu::Gauge::WriteAsJson()
          @     0x7f6aae81044f kudu::MetricRegistry::WriteAsJson()
          @     0x7f6ab2a66a6d kudu::WriteMetricsAsJson()
          @     0x7f6ab2a74ded kudu::Webserver::RunPathHandler()
          @     0x7f6ab2a75511 kudu::Webserver::BeginRequestCallback()
          @     0x7f6ab2a85938 handle_request
          @     0x7f6ab2a87248 process_new_connection
          @     0x7f6ab2a878a8 worker_thread
      

      Attachments

        Activity

          People

            andrew.wang Andrew Wang
            jdcryans Jean-Daniel Cryans
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: