KUDU-585. Fix segfault when querying metrics during tablet initialization.

LinkedListTest now has a background thread which periodically polls
some master and tablet server webpages. This will hopefully catch similar
bugs in the future.

Change-Id: I9a495436ffeecf2228409f366f162e0926e7d75b
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5707
Tested-by: jenkins
Reviewed-by: Jean-Daniel Cryans <jdcryans@cloudera.com>